--- a/source/stylesheets/components/_navigation.scss
+++ b/source/stylesheets/components/_navigation.scss
@@ -1,5 +1,3 @@
-@import "compass/css3/transition";
-
 nav, [role=navigation] {
   ul {
     list-style: none;
@@ -8,20 +6,16 @@ nav, [role=navigation] {
 }
 
 [role=navigation] {
-  @include container(90%);
-
-  @media only screen and (min-width: 768px) {
-    @include container(80%);
-  }
+  @include wrapper;
 
   ul {
-    @include span(12 of 12);
+    @include span-columns(12);
 
     text-align: center;
 
     @media only screen and (min-width: 600px) {
-      @include span(8 of 12);
-      @include pad(2 of 12);
+      @include span-columns(8);
+      @include shift(2);
     }
   }
 
@@ -32,8 +26,7 @@ nav, [role=navigation] {
   }
 
   a {
-    @include transition(color .25s $easing);
-
+    transition: color .25s $easing;
     color: $text-color;
     text-decoration: none;
     text-transform: uppercase;
