--- a/source/stylesheets/components/_teaser.scss
+++ b/source/stylesheets/components/_teaser.scss
@@ -1,6 +1,6 @@
 .teaser {
   color: $off-white;
-  background: $teaser-bg image-url("background.jpg");
+  background: $teaser-bg url("/images/background.jpg");
   background-size: 100% 100%;
   background-size: cover;
   background-position: center center;
