--- a/source/stylesheets/global/_buttons.scss
+++ b/source/stylesheets/global/_buttons.scss
@@ -1,11 +1,8 @@
-@import "compass/css3/box-shadow";
-
 .button,
 input[type=submit],
 button {
-  @include transition(background-color .5s $easing);
-  @include box-shadow(0 5px 10px rgba(0,0,0,.2));
-
+  transition: background-color .5s $easing;
+  box-shadow: 0 5px 10px rgba(0,0,0,.2);
   border-radius: .125em;
   background: $button-color;
   color: $white;
