--- a/source/stylesheets/components/_dribbble.scss
+++ b/source/stylesheets/components/_dribbble.scss
@@ -1,13 +1,5 @@
 .dribbble {
-  @include container(90%);
-
-  @media only screen and (min-width: 768px) {
-    @include container(80%);
-  }
-
-  @media only screen and (min-width: 60em) {
-    @include container(59em);
-  }
+  @include wrapper;
 
   margin-top: $base-font-size;
   padding-bottom: 50px;
@@ -21,43 +13,42 @@
     padding: 0;
 
     li {
-      @include span(12);
+      @include span-columns(12);
 
       @media only screen and (min-width: 201px) {
-        @include span(6 of 12);
+        @include span-columns(6);
 
         &:nth-child(2n) {
-          @include last(6 of 12);
+          @include omega;
         }
       }
   
       @media only screen and (min-width: 401px) {
-        @include span(4 of 12);
+        @include span-columns(4);
 
         &:nth-child(2n) {
-          @include span(4 of 12);
+          @include span-columns(4);
         }
 
         &:nth-child(3n) {
-          @include last(4 of 12);
+          @include omega;
         }
-        
       }
 
 
       @media only screen and (min-width: 601px) {
-        @include span(3 of 12);
+        @include span-columns(3);
 
         &:nth-child(2n) {
-          @include span(3 of 12);
+          @include span-columns(3);
         }
 
         &:nth-child(3n) {
-          @include span(3 of 12);
+          @include span-columns(3);
         }
 
         &:nth-child(4n) {
-          @include last(3 of 12);
+          @include omega;
         }
       }
     }
