--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,6 +1,3 @@
-@import "compass/css3/border-radius";
-@import "compass/css3/transition";
-
 $twitter-blue: #00aced;
 $pinterest-red: #CB2027;
 $dribbble-pink: #E24D87;
@@ -8,7 +5,7 @@ $gplus-red: #D64A2E;
 $app-net-gray: #898D90;
 
 [role=footer] {
-  @include container(80%);
+  @include wrapper;
 
   color: lighten($text-color, 50%);
   text-align: center;
@@ -20,9 +17,8 @@ $app-net-gray: #898D90;
   }
 
   .icon {
-    @include transition(background-color, color .5s $easing);
-    @include border-radius(5px);
-
+    transition: background-color .5s $easing, color .5s $easing;
+    border-radius: 5px;
     color: lighten($text-color, 50%);
     display: inline-block;
     padding: 18px 20px;
