--- a/source/pages/contact/_form.haml
+++ b/source/pages/contact/_form.haml
@@ -19,6 +19,6 @@
     %label
       How can I help you?
       %span.hint e.g. We recently got funded, we need a designer to help us redesign our MVP into a real product.
-    %textarea{rows: "8", cols: "80", required: "true"}
+    %textarea{name: "description", id: "description", rows: "8", cols: "80", required: "true"}
   %p.actions
     %button#btn_contact_submit Let's do it!
