Fix submit button

--- a/source/pages/contact/_form.haml
+++ b/source/pages/contact/_form.haml
@@ -20,4 +20,4 @@
       %span.hint e.g. We recently got funded, we need a designer to help us redesign our MVP into a real product.
     %textarea{name: "description", id: "description", rows: "8", cols: "80", required: "true"}
   %p.actions
-    %input#btn_contact_submit{type: "submit"} Let's do it!
+    %input#btn_contact_submit{type: "submit", value: "Let's do it!"}
