Update descriptions, add "open for projects" label

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,7 +1,8 @@
+= partial "layouts/open"
 = partial "pages/index/teaser"
 
 %a#work
-//= partial "pages/work/list"
+/= partial "pages/work/list"
 = partial "pages/work/dribbble"
 
 %a#testimonials
