--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -3,11 +3,14 @@
     .description
       :markdown
         I'm a self-taught digital product designer based in Berlin, firmly believing that
-        design is a process, not something that you put on top of a ready-made app. That's
-        why I've been dipping my toes into development world to be able to understand and
-        help your developers deliver product that your clients will love.
+        design is problem solving, rather than putting icing on a cake. This is why I will
+        work closely with your team, your customers and your stakeholders to make sure
+        that we deliver something that is delightful to your users while keeping an eye
+        on what you want to achieve as a business.
 
-        For the last couple of years I have been doing range of tasks - from interaction
-        design to front-end web development - as well as working with Ruby on Rails and 
-        Node.js. I can deliver anything your team needs - from concept sketches to pixel
-        perfect mockups and ready-made HTML prototypes.
+        For over ten years I have working with all sorts of teams and doing all sorts
+        of jobs, from user research to managing design teams, to make sure I understand the entire
+        lifecycle of your project and can deliver anything your team needs - from concept 
+        sketches to testable prototypes.
+
+        If this sounds like exactly who you're looking for, [get in touch](/contact.html).
