--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -28,6 +28,7 @@
 @import "components/about";
 @import "components/email";
 @import "components/testimonials";
+@import "components/banner";
 
 // Page styles
 @import "pages/work";
