Update footer text

--- a/source/layouts/_footer.haml
+++ b/source/layouts/_footer.haml
@@ -12,7 +12,9 @@
           %i.icon.icon-pinterest
 
   %p
-    &copy; 2013 Mariusz Ciesla.
+    &copy; 2013—2016 Mariusz Ciesla.
+    %br/
+    This site is open source. Want to see how it's built?  
     = link_to "See the source.", "https://github.com/mariusz/mariusz.cc"
 
   %p
