Use HMU instead of Formkeep

--- a/source/pages/contact/_form.haml
+++ b/source/pages/contact/_form.haml
@@ -1,4 +1,4 @@
-%form{action: "https://formkeep.com/f/e5bf280899d4", "accept-charset": "utf-8", method: "post"}
+%form{action: "http://api.hmu.cool/messages/1f42b06bf81f3885a1276ceb22c2bb53", "accept-charset": "utf-8", method: "post"}
   %p
     %label Your name
     %input{type: "text", name: "name", id: "name", required: "true"}
