Update contact form

--- a/source/contact.html.haml
+++ b/source/contact.html.haml
@@ -6,12 +6,13 @@ title: Let's create something awesome together
 
 .contact-form
   .contact-wrapper
-    .contact-intro
+    .contact-form-wrapper.contact-intro
       %h2 Let's build something amazing together!
 
       %p 
-        Fill in the form below to get in touch.
-        I usually respond in a couple of days.
+        Got a nice design project and you'd like me to work on it?
+        Just fill in the form below and I'll respond as soon as
+        possible (usually a couple of days).
 
     .contact-form-wrapper
       = partial "pages/contact/form"
