--- a/source/pages/contact/_email.haml
+++ b/source/pages/contact/_email.haml
@@ -2,7 +2,8 @@
   %header
     %h2 Let's work together
 
-  %p Got an interesting project and would like to work on it with me?
+  %p 
+    Got an interesting project and would like to work on it with me?
 
   %p
     = link_to "Get in touch", "/contact.html", class: "button"
