--- a/source/pages/contact/_form.haml
+++ b/source/pages/contact/_form.haml
@@ -1,22 +1,21 @@
 %form{action: "https://formkeep.com/f/e5bf280899d4", "accept-charset": "utf-8", method: "post"}
   %p
-    %label Your name
-    %input{type: "text", name: "name", id: "name", required: "true"}
+    %label{for: "name"} Your name:
+    %input{type: "text", name: "name", id: "name", required: "true", placeholder: "Awesome Person"}
   %p
-    %label Your email
-    %input{type: "email", name: "email", id: "email", required: "true"}
+    %label{for: "email"} Your email address:
+    %input{type: "email", name: "email", id: "email", required: "true", placeholder: "email@awesome.person"}
   %p
-    %label 
-      Your budget
-      %span.hint If you're not sure, it's okay, just guesstimate
+    %label{for: "budget"} 
+      Your budget:
+      %span.hint if you're not sure, it's okay to just guesstimate
     %select{name: "budget", id: "budget"}
-      %option{value: "5-10k"} $5.000 - $10.000
-      %option{value: "10-25k"} $10.000 - $25.000
-      %option{value: "25-50k"} $25.000 - $50.000
-      %option{value: "50k+"} $50.000+
+      %option{value: "10-25k"} $10.000 - $20.000
+      %option{value: "20-35k"} $20.000 - $35.000
+      %option{value: "50k+"} $35.000+
   %p.long-text
     %label
-      How can I help you?
+      In a couple of words, what's your project about:
       %span.hint e.g. We recently got funded, we need a designer to help us redesign our MVP into a real product.
     %textarea{name: "description", id: "description", rows: "8", cols: "80", required: "true"}
   %p.actions
