--- a/source/pages/index/_teaser.haml
+++ b/source/pages/index/_teaser.haml
@@ -5,10 +5,8 @@
     %h1
       Hello, my name is Mariusz and I
       %span.design-and-build 
-        design
-        %span.amp &amp;
-        build
-      web and mobile interfaces.
+        solve business problems
+      with design.
 
     .actions
       = link_to "See my work", "#work", class: "button teaser-button"
