--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -3,9 +3,9 @@
     .description
       :markdown
         I'm a self-taught digital product designer based in Berlin, firmly believing that
-        design is problem solving, rather than putting icing on a cake. This is why I will
-        work closely with your team, your customers and your stakeholders to make sure
-        that we deliver something that is delightful to your users while keeping an eye
+        design is a way to solve business problems, rather than putting icing on a cake. 
+        This is why I work closely with your team, your customers and your stakeholders 
+        to make sure that we deliver delight to your users while keeping an eye
         on what you want to achieve as a business.
 
         For over ten years I have working with all sorts of teams and doing all sorts
@@ -13,4 +13,4 @@
         lifecycle of your project and can deliver anything your team needs - from concept 
         sketches to testable prototypes.
 
-        If this sounds like exactly who you're looking for, [get in touch](/contact.html).
+        If this sounds exciting, [get in touch](/contact.html).
