Update once more

--- a/source/pages/index/_teaser.haml
+++ b/source/pages/index/_teaser.haml
@@ -5,8 +5,8 @@
     %h1
       Hello, my name is Mariusz and I
       %span.design-and-build 
-        solve business problems
-      with design.
+        solve problems
+      with good design.
 
     .actions
       = link_to "See my work", "#work", class: "button teaser-button"
