--- a/source/pages/work/_dribbble.haml
+++ b/source/pages/work/_dribbble.haml
@@ -1,7 +1,7 @@
 .dribbble
   %header
     %h2 
-      Recent designs from
+      Recent work from
       = link_to "Dribbble", "//dribbble.com/mariusz"
 
   %ul#dribbble_shots.shots
