--- a/source/stylesheets/components/_dribbble.scss
+++ b/source/stylesheets/components/_dribbble.scss
@@ -11,45 +11,26 @@
   .shots {
     list-style: none;
     padding: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 
     li {
-      @include span-columns(12);
-
-      @media only screen and (min-width: 201px) {
-        @include span-columns(6);
-
-        &:nth-child(2n) {
-          @include omega;
-        }
-      }
+      flex: 0 1 100%;
+      padding: 5px;
   
-      @media only screen and (min-width: 401px) {
-        @include span-columns(4);
-
-        &:nth-child(2n) {
-          @include span-columns(4);
-        }
-
-        &:nth-child(3n) {
-          @include omega;
-        }
+      @include media(401px) {
+        flex-basis: 50%;
       }
 
 
-      @media only screen and (min-width: 601px) {
-        @include span-columns(3);
+      @include media(601px) {
+        flex-basis: 33.3%;
+        padding: 10px;
+      }
 
-        &:nth-child(2n) {
-          @include span-columns(3);
-        }
-
-        &:nth-child(3n) {
-          @include span-columns(3);
-        }
-
-        &:nth-child(4n) {
-          @include omega;
-        }
+      @include media(901px) {
+        flex-basis: 25%;
       }
     }
 
