Add "Inspiration" tab for the Tumblr

--- a/source/layouts/_navigation.haml
+++ b/source/layouts/_navigation.haml
@@ -7,4 +7,6 @@
     %li
       = link_to "Writing", "http://medium.com/@dotmariusz", target: "_blank"
     %li
+      = link_to "Inspiration", "http://supply.mariusz.cc", target: "_blank"
+    %li
       = link_to "Contact", "/index.html#contact"
