Update to reflect my style more

--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -3,7 +3,7 @@
     .description
       :markdown
         I'm a self-taught digital product designer based in Berlin, firmly believing that
-        design is a way to solve business problems, rather than putting icing on a cake. 
+        design is a great tool to solve business problems. 
         This is why I work closely with your team, your customers and your stakeholders 
         to make sure that we deliver delight to your users while keeping an eye
         on what you want to achieve as a business.
