--- a/source/stylesheets/components/_testimonials.scss
+++ b/source/stylesheets/components/_testimonials.scss
@@ -24,7 +24,7 @@
   padding-bottom: 20px;
 
   blockquote {
-    font-family: "garvis-pro", serif;
+    font-family: "ff-tisa-web-pro", serif;
     font-style: italic;
     padding: 0;
     margin: 0;
