--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -2,7 +2,7 @@
 /= partial "layouts/open"
 
 %a#work
-/= partial "pages/work/list"
+= partial "pages/work/list"
 = partial "pages/work/dribbble"
 
 %a#testimonials
