Modular scale all the things

--- a/source/stylesheets/components/_about.scss
+++ b/source/stylesheets/components/_about.scss
@@ -4,7 +4,7 @@
   background-position: bottom right;
   background-repeat: no-repeat;
   color: #fff;
-  padding: 50px;
+  padding: ms(4);
   min-height: 400px;
 
   @media only screen and (min-width: 800px) {
