--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -1,6 +1,6 @@
 $base-font-size: 1.5rem;
 $ms-base: $base-font-size;
-$ms-ratio: 1.25;
+$ms-ratio: $major-third;
 $line-height: 1.5; 
 $header-line-height: 1.25;
 $font-family-sans: "mr-eaves-xl-modern", sans-serif;
