--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -12,7 +12,7 @@
     %meta{name: "description", content: "Web and Mobile User Interface and User Experience Design Consultant based in Berlin, Germany."}
     %meta{name: "keywords", content: "freelance, web design, ui design, ux design, designer, interactive design, mobile design, iOS design, user interface, user experience, consultant berlin"}
 
-    %title= (current_page.data.title || "Web &amp; Mobile User Experience & User Interface Designer") + " &mdash; Mariusz Cieśla"
+    %title= (current_page.data.title || "Web &amp; Mobile Interface & Experience Designer") + " &mdash; Mariusz Cieśla &mdash; Berlin"
 
     = partial "layouts/typekit"
     = partial "layouts/analytics"
