--- a/source/pages/index/_teaser.haml
+++ b/source/pages/index/_teaser.haml
@@ -5,8 +5,8 @@
   .page
     %h1#teaserText
       %span.design-and-build
-        So much more than pretty pixels.
-      Hello. My name is Mariusz and I believe in solving business problems with good design.
+        Design with purpose.
+      Hello. My name is Mariusz and I believe in solving real problems with good design.
 
     .actions
       = link_to "See my work", "#work", class: "button teaser-button"
