--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -3,14 +3,18 @@
     .description
       :markdown
         I'm a self-taught digital product designer based in Berlin, firmly believing that
-        design is a great tool to solve business problems. 
-        This is why I work closely with your team, your customers and your stakeholders 
-        to make sure that we deliver delight to your users while keeping an eye
-        on what you want to achieve as a business.
+        design is first and foremost about visual problem solving. This is why I dedicated
+        my career to working closely alongside great companies, making sure we deliver
+        delight to the customers at every step of their interaction with their brand and
+        product.
 
-        For over ten years I have working with all sorts of teams and doing all sorts
-        of jobs, from user research to managing design teams, to make sure I understand the entire
-        lifecycle of your project and can deliver anything your team needs - from concept 
-        sketches to testable prototypes.
+        I will work closely with your team, your customers and your stakeholders 
+        to make sure that we deliver exactly what they need, while keeping an eye
+        on your business goals & objectives.
+
+        For over ten years I have been working with all sorts of teams and doing all sorts
+        of jobs from user research to managing design teams to make sure I understand the entire
+        lifecycle of the product and can deliver anything your team needs - from ideas,
+        concepts and sketches to working prototypes that you can test with your customers.
 
         If this sounds exciting, [get in touch](/contact.html).
