--- a/source/pages/index/_teaser.haml
+++ b/source/pages/index/_teaser.haml
@@ -5,7 +5,7 @@
   .page
     %h1#teaserText
       %span.design-and-build
-        Design with purpose.
+        So much more than pixels.
       Hello. My name is Mariusz and I believe in solving real problems with good design.
 
     .actions
