--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -13,7 +13,7 @@
         on your business goals & objectives.
 
         For over ten years I have been working with all sorts of teams and doing all sorts
-        of jobs from user research to managing design teams to make sure I understand the entire
+        of jobs, from user research to managing design teams, to make sure I understand the entire
         lifecycle of the product and can deliver anything your team needs - from ideas,
         concepts and sketches to working prototypes that you can test with your customers.
 
