Change styles & copy

--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -1,6 +1,6 @@
 .about
   .content
-    .description
+    .description.wow.fadeInUp
       :markdown
         I'm a self-taught digital product designer based in Berlin, firmly believing that
         design is first and foremost about visual problem solving. This is why I dedicated
