--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -2,8 +2,9 @@
 @import "bourbon";
 @import "neat";
 @import "modular-scale";
-@import "vendor/animate";
 @import "flickity";
+@import "libs/animate.css";
+@import "site.css";
 
 // Mixins
 @import "lib/image-2x";
