--- a/source/stylesheets/components/_teaser.scss
+++ b/source/stylesheets/components/_teaser.scss
@@ -1,25 +1,23 @@
 $teaser-bg-color: $off-white;
 
 .teaser {
-  color: $text-color;
-  background: $teaser-bg-color;
+  color: $white;
   position: relative;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(/images/background.jpg);
 
   .page {
-    padding-top: ms(5);
-    padding-bottom: ms(7);
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     @media only screen and (min-width: 800px) {
       padding-top: ms(8);
       padding-bottom: ms(10);
     }
-  }
-
-  .page h1, .actions {
-    @extend .animated;
-    @extend .fadeInUp;
   }
 
   h1 {
@@ -65,6 +63,8 @@ $teaser-bg-color: $off-white;
   font-size: 1.25em;
   display: block;
   margin-bottom: 2em;
+  color: $white;
+  border-color: $white;
 
   @media only screen and (min-width: 48em) {
     display: inline-block;
