Add short skill overview

--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -30,6 +30,7 @@
 @import "components/email";
 @import "components/testimonials";
 @import "components/banner";
+@import "components/skills";
 
 // Page styles
 @import "pages/work";
