--- a/source/stylesheets/components/_teaser.scss
+++ b/source/stylesheets/components/_teaser.scss
@@ -7,12 +7,14 @@ $teaser-bg-color: $off-white;
   background-position: center;
   background-repeat: no-repeat;
   background-image: url(/images/background.jpg);
+  min-height: 640px;
 
   .page {
     height: 65vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 500px;
 
     @media only screen and (min-width: 800px) {
       padding-top: ms(8);
