Scrolling magic, still buggy

--- a/source/layouts/_header.haml
+++ b/source/layouts/_header.haml
@@ -1,5 +1,6 @@
 %header{role: "banner"}
-  %h1 
-    = link_to "Mariusz Cieśla", "/"
+  .page
+    %h1 
+      = link_to "Mariusz Cieśla", "/"
 
-  = partial "layouts/navigation"
+    = partial "layouts/navigation"
