--- a/source/pages/work/_dribbble.haml
+++ b/source/pages/work/_dribbble.haml
@@ -1,8 +1,9 @@
 .dribbble
-  %header
-    %h2 
-      Recent work from
-      = link_to "Dribbble", "//dribbble.com/mariusz"
+  .page
+    %header
+      %h2 
+        Recent work from
+        = link_to "Dribbble", "//dribbble.com/mariusz"
 
-  %ul#dribbble_shots.shots
+    %ul#dribbble_shots.shots
 
