--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -3,7 +3,7 @@ $ms-base: $base-font-size;
 $ms-ratio: $major-third;
 $line-height: 1.5; 
 $header-line-height: 1.25;
-$font-family-sans: "mr-eaves-xl-modern", sans-serif;
+$font-family-sans: "soleil", sans-serif;
 $font-family-serif: "ff-tisa-web-pro", serif;
 
 body {
