--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,16 +1,19 @@
+= partial "layouts/header"
 = partial "pages/index/teaser"
 /= partial "layouts/open"
 
-%a#work
-/= partial "pages/work/list"
-= partial "pages/work/dribbble"
+#work
+  /= partial "pages/work/list"
+  = partial "pages/work/dribbble"
 
-%a#testimonials
-= partial "pages/work/testimonials"
+#testimonials
+  = partial "pages/work/testimonials"
 
-%a#about
-= partial "pages/about/short"
-= partial "pages/about/skills"
+#about
+  = partial "pages/about/short"
 
-%a#contact
-= partial "pages/contact/email"
+#skills
+  = partial "pages/about/skills"
+
+#contact
+  = partial "pages/contact/email"
