--- a/source/layouts/_typekit.haml
+++ b/source/layouts/_typekit.haml
@@ -1,4 +1,4 @@
-%script{src: "//use.typekit.net/tgm7gqo.js", type: "text/javascript"}
+%script{src: "https://use.typekit.net/iqe3nch.js", type: "text/javascript"}
 
 :javascript
   try{Typekit.load();}catch(e){}
