--- a/source/stylesheets/components/_header.scss
+++ b/source/stylesheets/components/_header.scss
@@ -1,10 +1,12 @@
 [role=banner] {
-  margin-top: 50px;
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 99;
 
   h1 {
-    position: relative;
-    top: -25px;
+    float: left;
 
     a {
       @include image-2x("/images/logo.png", "/images/logo@2x.png", 48px, 48px);
