--- a/source/stylesheets/components/_navigation.scss
+++ b/source/stylesheets/components/_navigation.scss
@@ -1,4 +1,10 @@
 nav, [role=navigation] {
+  display: none;
+
+  @media only screen and (min-width: 640px) {
+    display: block;
+  }
+  
   ul {
     list-style: none;
     padding: 0;
