--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -3,12 +3,12 @@
     .description.wow.fadeInUp
       :markdown
         I'm a self-taught digital product designer based in Berlin, firmly believing that
-        design is first and foremost about visual problem solving. This is why I dedicated
-        my career to working closely alongside great companies, making sure we deliver
-        delight to the customers at every step of their interaction with their brand and
+        design is first and foremost about solving problems. This is why I dedicated
+        my career to working closely with great companies, making sure we deliver
+        delight to their customers at every step of interaction with their
         product.
 
-        I will work closely with your team, your customers and your stakeholders 
+        I work closely with your team, your customers and your stakeholders 
         to make sure that we deliver exactly what they need, while keeping an eye
         on your business goals & objectives.
 
