--- a/source/stylesheets/pages/_contact.scss
+++ b/source/stylesheets/pages/_contact.scss
@@ -2,6 +2,11 @@
   [role=banner] {
     margin: 50px 0;
     padding: 0;
+    position: absolute;
+  }
+
+  [role=navigation] a {
+    color: $text-color;
   }
 
   h1 {
@@ -19,7 +24,7 @@
 
   .contact-form {
     background: #f2f2f2;
-    padding: 50px 0;
+    padding: 200px 0 50px;
 
     form {
       padding-top: 50px;
