--- a/source/stylesheets/components/_navigation.scss
+++ b/source/stylesheets/components/_navigation.scss
@@ -7,10 +7,11 @@ nav, [role=navigation] {
 }
 
 [role=navigation] {
-  float: right;
+  flex: 1;
 
   ul {
     text-align: center;
+    float: right;
   }
 
   li {
