--- a/source/stylesheets/components/_teaser.scss
+++ b/source/stylesheets/components/_teaser.scss
@@ -28,6 +28,7 @@ $teaser-bg-color: $off-white;
 
     @media only screen and (min-width: 40em) {
       font-size: ms(2);
+      letter-spacing: -.05em;
     }
   }
 
