--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -3,6 +3,7 @@ $off-white: #f2f2f2;
 $button-color: #F89820;
 $teaser-bg: $button-color;
 $white: #fff;
+$hr: #e8e8e8;
 
 $text-color: #364054;
 $separator-color: $off-white;
