--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -3,13 +3,15 @@ $ms-base: $base-font-size;
 $ms-ratio: $major-third;
 $line-height: 1.5; 
 $header-line-height: 1.25;
-$font-family-sans: "soleil", sans-serif;
+$font-family-sans: "runda", sans-serif;
 $font-family-serif: "ff-tisa-web-pro", serif;
+$font-weight: 300;
+$font-weight-bold: 700;
 
 body {
   font-family: $font-family-sans;
   font-size: 100%;
-  font-weight: 500;
+  font-weight: $font-weight;
   line-height: $line-height;
 
   // Fix fonts
