Update skills list design

--- a/source/pages/index/_teaser.haml
+++ b/source/pages/index/_teaser.haml
@@ -5,7 +5,7 @@
       %h1.wow.fadeInUp#teaserText
         %span.design-and-build
           So much more than pixels.
-        Hello. My name is Mariusz and I believe in solving real problems with good design.
+        Hello, my name is Mariusz and I believe in design that creates a lasting value.
 
       .actions.wow.fadeInUp
         = link_to "See my work", "#work", class: "button teaser-button"
